--- a/src/pages/Favoritos/favoritos.css
+++ b/src/pages/Favoritos/favoritos.css
@@ -1,18 +1,17 @@
-.lista-filmes {
+.meus-filmes{
+    justify-content: center;
     max-width: 900px;
     margin: 14px auto;
     display: flex; /* Use flexbox para organizar os artigos lado a lado */
     flex-wrap: wrap; /* Permita que os artigos sejam colocados abaixo se excederem a largura do container */
 }
 
-.loading{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 14px;
+.div-h1 h1 {
+    text-align: center;
+    margin: 10px 0;
 }
 
-.lista-filmes article {
+.meus-filmes article{
     flex: 0 0 calc(50% - 20px); /* Cada artigo ocupa metade da largura do container, descontando as margens */
     background-color: #FFF;
     padding: 15px;
@@ -21,33 +20,55 @@
     box-sizing: border-box;
 }
 
-.lista-filmes strong{
-    margin-bottom: 14px;
+.meus-filmes strong{
+    margin: 5px 0;
+    display:block;
     text-align: center;
-    font-size: 22px;
-    display: block;
+   
 }
 
-.lista-filmes img{
+.meus-filmes img{
     width: 800px;
     max-width: 100%;
     max-height: 100%px;
     object-fit: fill;
     display:block;
-    border-top-left-radius: 8px;
-    border-top-right-radius: 8px;
+    border-radius: 8px;
+   
     
 }
 
-.lista-filmes a{
+.buttons{
     display: flex;
+    justify-content: space-between;
     align-items: center;
-    justify-content: center;
-    padding: 10px 0;
-    font-size: 20px;
-    background-color: #116FeB;
-    text-decoration: none;
-    color: #FFF;
-    border-bottom-left-radius: 8px;
-    border-bottom-right-radius: 8px;
+    text-align: center;
 }
+
+.buttons a {
+    color: #FFF;
+    height: 45px;
+    width: 135px;
+    text-decoration: none;
+    margin-top: 10px;
+    background-color: #116feb;
+    padding: 10px;
+    border-radius: 8px;
+    font-size: 20px;
+    font-family: sans-serif;
+   
+}
+
+.buttons button{
+    height: 45px;
+    width: 135px;
+    color: #FFF;
+    margin-top: 10px;
+    background-color: #DC143C;
+    padding: 10px;
+    border-radius: 8px;
+    font-size: 20px;
+    font-family: sans-serif;
+    border: none;
+}
+
